--- a/VehicleSimulator/VehicleSimulator.csproj
+++ b/VehicleSimulator/VehicleSimulator.csproj
@@ -137,6 +137,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TxtReading\TxtInfo.cs" />
+    <Compile Include="TxtReading\ITxtInfo.cs" />
     <EmbeddedResource Include="CustomUserControl\UcContentOfAbout.resx">
       <DependentUpon>UcContentOfAbout.cs</DependentUpon>
     </EmbeddedResource>
