--- a/TrafficControlTest/TrafficControlTest.csproj
+++ b/TrafficControlTest/TrafficControlTest.csproj
@@ -106,11 +106,11 @@
     </Reference>
     <Reference Include="SerialData, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>Include\iTSLibrary\SerialData.dll</HintPath>
+      <HintPath>C:\Users\Howard\source\repos\iTSLibrary\iTSLibrary\bin\Debug\SerialData.dll</HintPath>
     </Reference>
     <Reference Include="Serialization, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>Include\iTSLibrary\Serialization.dll</HintPath>
+      <HintPath>C:\Users\Howard\source\repos\iTSLibrary\iTSLibrary\bin\Debug\Serialization.dll</HintPath>
     </Reference>
     <Reference Include="SharpGL, Version=2.4.0.0, Culture=neutral, PublicKeyToken=27fc851303210b27, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -586,7 +586,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="ClassDiagram1.cd" />
-    <None Include="Include\iTSLibrary\Style.ini" />
+    <None Include="include\iTSLibrary\Style.ini" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
@@ -633,62 +633,64 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icons8_traffic_jam_4.ico" />
-    <Content Include="Include\iTSLibrary\AsyncSocket.dll" />
-    <Content Include="Include\iTSLibrary\AsyncSocket.pdb" />
-    <Content Include="Include\iTSLibrary\Geometry.dll" />
-    <Content Include="Include\iTSLibrary\Geometry.pdb" />
-    <Content Include="Include\iTSLibrary\GLCore.dll" />
-    <Content Include="Include\iTSLibrary\GLCore.pdb" />
-    <Content Include="Include\iTSLibrary\GLStyle.dll" />
-    <Content Include="Include\iTSLibrary\GLStyle.pdb" />
-    <Content Include="Include\iTSLibrary\GLUI.dll" />
-    <Content Include="Include\iTSLibrary\GLUI.pdb" />
-    <Content Include="Include\iTSLibrary\Hasp.dll" />
-    <Content Include="Include\iTSLibrary\Hasp.pdb" />
-    <Content Include="Include\iTSLibrary\hasp_net_windows.dll" />
-    <Content Include="Include\iTSLibrary\Image\AGV.png" />
-    <Content Include="Include\iTSLibrary\Image\black.png" />
-    <Content Include="Include\iTSLibrary\Image\ChargingDocking.png" />
-    <Content Include="Include\iTSLibrary\Image\ConveyorDocking.png" />
-    <Content Include="Include\iTSLibrary\Image\General.png" />
-    <Content Include="Include\iTSLibrary\Image\MagneticTracking.png" />
-    <Content Include="Include\iTSLibrary\Image\Narrow.png" />
-    <Content Include="Include\iTSLibrary\Image\Park.png" />
-    <Content Include="Include\iTSLibrary\Image\Pin.png" />
-    <Content Include="Include\iTSLibrary\Image\Position.png" />
-    <Content Include="Include\iTSLibrary\Image\PullDown.png" />
-    <Content Include="Include\iTSLibrary\Image\PullUp.png" />
-    <Content Include="Include\iTSLibrary\Image\RearMagneticTracking.png" />
-    <Content Include="Include\iTSLibrary\Image\wf10.png" />
-    <Content Include="Include\iTSLibrary\Image\wf20.png" />
-    <Content Include="Include\iTSLibrary\Image\wf30.png" />
-    <Content Include="Include\iTSLibrary\Image\wf40.png" />
-    <Content Include="Include\iTSLibrary\Image\wf50.png" />
-    <Content Include="Include\iTSLibrary\Image\wf60.png" />
-    <Content Include="Include\iTSLibrary\Image\wf70.png" />
-    <Content Include="Include\iTSLibrary\Image\wf80.png" />
-    <Content Include="Include\iTSLibrary\Image\wf90.png" />
-    <Content Include="Include\iTSLibrary\IniFiles.dll" />
-    <Content Include="Include\iTSLibrary\IniFiles.pdb" />
-    <Content Include="Include\iTSLibrary\LogManager.dll" />
-    <Content Include="Include\iTSLibrary\LogManager.pdb" />
-    <Content Include="Include\iTSLibrary\MapReader.dll" />
-    <Content Include="Include\iTSLibrary\MapReader.pdb" />
-    <Content Include="Include\iTSLibrary\MD5Hash.dll" />
-    <Content Include="Include\iTSLibrary\MD5Hash.pdb" />
-    <Content Include="Include\iTSLibrary\SerialData.dll" />
-    <Content Include="Include\iTSLibrary\SerialData.pdb" />
-    <Content Include="Include\iTSLibrary\Serialization.dll" />
-    <Content Include="Include\iTSLibrary\Serialization.pdb" />
-    <Content Include="Include\iTSLibrary\SharpGL.dll" />
-    <Content Include="Include\iTSLibrary\SharpGL.SceneGraph.dll" />
-    <Content Include="Include\iTSLibrary\SharpGL.Serialization.dll" />
-    <Content Include="Include\iTSLibrary\SharpGL.WinForms.dll" />
-    <Content Include="Include\iTSLibrary\ThreadSafety.dll" />
-    <Content Include="Include\iTSLibrary\ThreadSafety.pdb" />
-    <Content Include="Include\iTSLibrary\WaitTask.dll" />
-    <Content Include="Include\iTSLibrary\WaitTask.pdb" />
-    <Content Include="Include\iTSLibrary\zh-TW\GLUI.resources.dll" />
+    <Content Include="include\iTSLibrary\AsyncSocket.dll" />
+    <Content Include="include\iTSLibrary\AsyncSocket.pdb" />
+    <Content Include="include\iTSLibrary\Geometry.dll" />
+    <Content Include="include\iTSLibrary\Geometry.pdb" />
+    <Content Include="include\iTSLibrary\GLCore.dll" />
+    <Content Include="include\iTSLibrary\GLCore.pdb" />
+    <Content Include="include\iTSLibrary\GLStyle.dll" />
+    <Content Include="include\iTSLibrary\GLStyle.pdb" />
+    <Content Include="include\iTSLibrary\GLUI.dll" />
+    <Content Include="include\iTSLibrary\GLUI.pdb" />
+    <Content Include="include\iTSLibrary\Image\AGV.png" />
+    <Content Include="include\iTSLibrary\Image\black.png" />
+    <Content Include="include\iTSLibrary\Image\ChargingDocking.png" />
+    <Content Include="include\iTSLibrary\Image\ConveyorDocking.png" />
+    <Content Include="include\iTSLibrary\Image\General.png" />
+    <Content Include="include\iTSLibrary\Image\MagneticTracking.png" />
+    <Content Include="include\iTSLibrary\Image\Narrow.png" />
+    <Content Include="include\iTSLibrary\Image\Park.png" />
+    <Content Include="include\iTSLibrary\Image\Pin.png" />
+    <Content Include="include\iTSLibrary\Image\Position.png" />
+    <Content Include="include\iTSLibrary\Image\PullDown.png" />
+    <Content Include="include\iTSLibrary\Image\PullUp.png" />
+    <Content Include="include\iTSLibrary\Image\RearMagneticTracking.png" />
+    <Content Include="include\iTSLibrary\Image\wf10.png" />
+    <Content Include="include\iTSLibrary\Image\wf20.png" />
+    <Content Include="include\iTSLibrary\Image\wf30.png" />
+    <Content Include="include\iTSLibrary\Image\wf40.png" />
+    <Content Include="include\iTSLibrary\Image\wf50.png" />
+    <Content Include="include\iTSLibrary\Image\wf60.png" />
+    <Content Include="include\iTSLibrary\Image\wf70.png" />
+    <Content Include="include\iTSLibrary\Image\wf80.png" />
+    <Content Include="include\iTSLibrary\Image\wf90.png" />
+    <Content Include="include\iTSLibrary\IniFiles.dll" />
+    <Content Include="include\iTSLibrary\IniFiles.pdb" />
+    <Content Include="include\iTSLibrary\iTSLibrary.dll" />
+    <Content Include="include\iTSLibrary\iTSLibrary.pdb" />
+    <Content Include="include\iTSLibrary\LogManager.dll" />
+    <Content Include="include\iTSLibrary\LogManager.pdb" />
+    <Content Include="include\iTSLibrary\MapReader.dll" />
+    <Content Include="include\iTSLibrary\MapReader.pdb" />
+    <Content Include="include\iTSLibrary\MD5Hash.dll" />
+    <Content Include="include\iTSLibrary\MD5Hash.pdb" />
+    <Content Include="include\iTSLibrary\SerialData.dll" />
+    <Content Include="include\iTSLibrary\SerialData.pdb" />
+    <Content Include="include\iTSLibrary\Serialization.dll" />
+    <Content Include="include\iTSLibrary\Serialization.pdb" />
+    <Content Include="include\iTSLibrary\SharpGL.dll" />
+    <Content Include="include\iTSLibrary\SharpGL.SceneGraph.dll" />
+    <Content Include="include\iTSLibrary\SharpGL.Serialization.dll" />
+    <Content Include="include\iTSLibrary\SharpGL.WinForms.dll" />
+    <Content Include="include\iTSLibrary\ThreadSafety.dll" />
+    <Content Include="include\iTSLibrary\ThreadSafety.pdb" />
+    <Content Include="include\iTSLibrary\WaitTask.dll" />
+    <Content Include="include\iTSLibrary\WaitTask.pdb" />
+    <Content Include="include\iTSLibrary\zh-TW\GLUI.resources.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="NewFolder1\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
